confirm participant